--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
     <%= htmlWebpackPlugin.tags.headTags %>
 </head>
 <body style="width: 720px; margin: 0 auto; padding: 0;">
