--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 </head>
 <body style="width: 720px; margin: 0 auto; padding: 0;">
     <div id="root"></div>
-    <%= htmlWebpackPlugin.tags.bodyTags %>
+    <!-- <%= htmlWebpackPlugin.tags.bodyTags %> -->
 </body>
 </html>
