--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <%= htmlWebpackPlugin.tags.headTags %>
+    <!-- <%= htmlWebpackPlugin.tags.headTags %> -->
+    <link rel="manifest" href="manifest/manifest.json">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body style="width: 720px; margin: 0 auto; padding: 0;">
     <div id="root"></div>
     <!-- <%= htmlWebpackPlugin.tags.bodyTags %> -->
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', function() {
+                navigator.serviceWorker.register('/serviceWorker.js').then(function(registration) {
+                    // Registration was successful
+                    console.log('ServiceWorker успешно зарегистрирован со сферой действия: ', registration.scope);
+                    }, function(err) {
+                    // registration failed
+                    console.log('ServiceWorker не удалось зарегистрировать: ', err);
+                }).catch(function(err) {
+                    console.log(err)
+                });
+            });
+        } else {
+            console.log('ServiceWorker не поддерживается');
+        }
+     </script>
+     <script>
+        window.addEventListener('appinstalled', (evt) => {
+            fetch('<your_url>', {
+                method: 'GET',
+                credentials: 'include',
+            });
+        });
+      </script>
+      <script src="notification.js"></script>
 </body>
 </html>
